--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 
 
                 <h1>Acuña Isaías</h1>
-                <h2>Desarrollador Web Full-Stack</h2>
+                <h2>Desarrollador Web FullStack</h2>
 
                 <div class="buttons-contact">
                     <button><a href="#"><i class='bx bx-mail-send'></i>Contáctame</a></button>
                     <button><a href="#"><i class='bx bxl-linkedin-square'></i>LinkedIn</a></button>
-                    <button><a href="#"><i class='bx bxl-github'></i>GitHub</a></button>
+                    <button class="button-github"><a href="#"><i class='bx bxl-github'></i>GitHub</a></button>
                 </div>
 
 
